added delete and update and Favorite save

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Your first Spring application</title>
+    <title>Meetup API</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<p><a href="/hello">Greet the world!</a></p>
 
-<form action="/hello" method="GET" id="nameForm">
     <div>
-        <label for="nameField">How should the app call you?</label>
-        <input name="myName" id="nameField">
-        <button>Greet me!</button>
+       <h1>Meetup API</h1>
+
     </div>
-</form>
 </body>
 </html>
